--- a/aerobatDB/DESCRIPTION
+++ b/aerobatDB/DESCRIPTION
@@ -3,9 +3,12 @@ Title: Aerobatic Contest Database Query Utilities
 Version: 0.1
 Date: 2016-11-25
 Author: Douglas Lovell
+Authors@R: person("Douglas", "Lovell", role=c("aut","cre","ctb"),
+    email="doug@wbreeze.com")
 Maintainer: Douglas Lovell <doug@wbreeze.com>
 Description: A collection of classes and functions for retrieving
     and manipulating data frames from an aerobatic contest database (CDB).
 License: GPL-3 | file LICENSE
-Depends: jsonlite
-
+Imports: jsonlite, testthat
+URL: https://github.com/wbreeze/acd_stats/tree/master/aerobatDB
+BugReports: https://github.com/wbreeze/acd_stats/issues
