Add boiler plate for Prechi

--- a/prechi/src/Makefile.am
+++ b/prechi/src/Makefile.am
@@ -1,6 +1,8 @@
 lib_LTLIBRARIES = libprechi.la
 nobase_include_HEADERS = \
-  prechi_partition.h
+  prechi_partition.h \
+  prechi.h
 
 libprechi_la_SOURCES = \
-  prechi_partiton.h, prechi_partition.c
+  prechi_partiton.h, prechi_partition.c \
+  prechi.h prechi.c
