--- a/prechi/test/Makefile.am
+++ b/prechi/test/Makefile.am
@@ -14,4 +14,5 @@ test_prechi_la_SOURCES = \
   test_partition.h test_partition.c \
   test_partition_create.c \
   test_partition_join.c \
-  test_partition_sort.c
+  test_partition_sort.c \
+  test_prechi.h test_prechi.c
