Rename test data files

--- a/prechi/test/Makefile.am
+++ b/prechi/test/Makefile.am
@@ -11,7 +11,7 @@ AM_LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
 
 test_prechi_la_SOURCES = \
   array_init.h array_init.c \
-  test_partition.h test_partition.c \
+  test_data.h test_data.c \
   test_partition_create.c \
   test_partition_join.c \
   test_partition_mean.c \
