Refine .gitignore files

--- a/prechi/.gitignore
+++ b/prechi/.gitignore
@@ -1,19 +1,9 @@
 Makefile.in
 Makefile
-aclocal.m4
-ar-lib
-autom4te.cache
-config.guess
-config.log
-config.status
-config.sub
-depcomp
-libtool
-ltmain.sh
-missing
 *.la
 *.lo
 *.o
-stamp-h1
-.libs
 .deps
+.dirstamp
+src/prechi.so
+src/symbols.rds
