--- a/aerobatDB/DESCRIPTION
+++ b/aerobatDB/DESCRIPTION
@@ -2,6 +2,7 @@ Package: aerobatDB
 Title: Aerobatic Contest Database Query Utilities
 Version: 0.3
 Date: 2019-10-03
+Encoding: UTF-8
 Author: Douglas Lovell
 Authors@R: person("Douglas", "Lovell", role=c("aut","cre","ctb"),
     email="doug@wbreeze.com")
@@ -11,5 +12,6 @@ Description: A collection of classes and functions for retrieving
 License: GPL-3 | file LICENSE
 Imports: jsonlite, purrr
 Suggests: testthat
+LazyData: true
 URL: https://github.com/wbreeze/acd_stats/tree/master/aerobatDB
 BugReports: https://github.com/wbreeze/acd_stats/issues
