--- a/aerobatStats/DESCRIPTION
+++ b/aerobatStats/DESCRIPTION
@@ -5,9 +5,9 @@ Authors@R: person("Douglas", "Lovell", email = "doug@wbreeze.com", role = c("aut
 Description:
   Execute a systematic analysis of judge grading patterns, in particular,
   investigate the null hypothesis that they fit a normal distribution
-Depends: R (>= 3.3.2), aerobatDB, purrr, nortest, moments
+Depends: R (>= 3.3.2), purrr, nortest, moments
 License: GPL-3 | file LICENSE
 Encoding: UTF-8
-Imports: aerobatDB, jsonlite, purrr
+Imports: jsonlite
 Suggests: testthat
 LazyData: true
